a new way to locale thingy

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,9 @@
+desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
+
+homepage_top_hello: Hello, my name is Batuhan İçöz.
 homepage_tagline: I'm a %beenalivefor% web developer, teen entrepreneur and a student.
 homepage_twitter_follow: Follow
-homepage_about_me: About me
-homepage_my_projects: My Projects
-homepage_contact_me: Contact me
+homepage_l_about_me: About me
+homepage_l_my_projects: My Projects
+homepage_l_contact_me: Contact me
 hello: Hello
