--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -1,6 +1,9 @@
+desc: Fırat Batuhan İçöz ve yaptıkları hakkında her şeyi bulabileceğiniz bir yer.
+homepage_top_hello: Merhaba, ben Batuhan İçöz.
 homepage_tagline: %beenalivefor% bir web geliştiricsi, genç girişimci ve öğrenci.
+
 homepage_twitter_follow: Takip et
-homepage_about_me: Hakkımda
-homepage_my_projects: Projelerim
-homepage_contact_me: İletişim
+homepage_l_about_me: Hakkımda
+homepage_l_my_projects: Projelerim
+homepage_l_contact_me: İletişim
 hello: Merhaba
