changed the hello text

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,6 @@
 desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 
-homepage_top_hello: Hello, my name is Batuhan İçöz.
+homepage_top_hello: Hello, I'm Batuhan İçöz.
 homepage_tagline: I'm a %beenalivefor% web developer, teen entrepreneur and a student.
 homepage_twitter_follow: Follow
 homepage_l_about_me: About me
