--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,3 +1,5 @@
+route_contact: contact
+
 desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 
 homepage_top_hello: Hello, I'm Batuhan İçöz.
