--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -1,3 +1,5 @@
+route_contact: iletisim
+
 desc: Fırat Batuhan İçöz ve yaptıkları hakkında her şeyi bulabileceğiniz bir yer.
 homepage_top_hello: Merhaba, ben Batuhan İçöz.
 homepage_tagline: %beenalivefor% bir web geliştiricsi, genç girişimci ve öğrenci.
