--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,11 +1,16 @@
-route_contact: contact
+route_about: /about
+route_contact: /contact
+
+l_batuhans: Batuhan's
+l_homepage: Anasayfa
+l_about_me: About me
+l_my_projects: My Projects
+l_contact_me: Contact me
 
 desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 
 homepage_top_hello: Hello, I'm Batuhan İçöz.
-homepage_tagline: I'm a %beenalivefor% web developer, teen entrepreneur and a student.
+homepage_tagline: I'm a web developer, an amateur entrepreneur and a student.
 homepage_twitter_follow: Follow
-homepage_l_about_me: About me
-homepage_l_my_projects: My Projects
-homepage_l_contact_me: Contact me
+
 hello: Hello
