--- a/locales/en.yml
+++ b/locales/en.yml
@@ -2,7 +2,7 @@ route_about: /about
 route_contact: /contact
 
 l_batuhans: Batuhan's
-l_homepage: Anasayfa
+l_homepage: Homepage
 l_about_me: About me
 l_my_projects: My Projects
 l_contact_me: Contact me
