--- a/locales/en.yml
+++ b/locales/en.yml
@@ -13,4 +13,4 @@ homepage_top_hello: Hello, I'm Batuhan İçöz.
 homepage_tagline: I'm a web developer, an amateur entrepreneur and a student.
 homepage_twitter_follow: Follow
 
-hello: Hello
+about_title: Everything About 
