--- a/locales/en.yml
+++ b/locales/en.yml
@@ -12,7 +12,7 @@ desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 homepage_top_hello: "Hello, I'm Batuhan İçöz."
 homepage_tagline: "I'm a web developer, an amateur entrepreneur and a student."
 homepage_twitter_follow: Follow
-homepage_currently: |
+homepage_currently: >
     I'm currently 17-year-old and doing <a href="#">some awesome stuff</a>:
 about_title: Everything About 
 
