added route for legal

--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -4,6 +4,7 @@ lang_name: Türkçe
 route_about: hakkimda
 route_contact: iletisim
 route_pages: sayfalar
+route_legal: yasalbilgiler
 
 l_batuhans: Batuhan İçöz
 l_homepage: Anasayfa
