--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,6 +4,7 @@ lang_name: English
 route_about: about
 route_contact: contact
 route_pages: pages
+route_legal: legalinformation
 
 l_batuhans: Batuhan's
 l_homepage: Homepage
