fixed a silly mistake

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -15,7 +15,7 @@ l_contact_me: Contact me
 desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 
 homepage_top_hello: "Hello, I'm Batuhan İçöz."
-homepage_tagline: "I'm a 17-year-old web developer and a student."
+homepage_tagline: "I'm a 17-year-old Turkish web developer and a student."
 homepage_twitter_follow: Follow
 homepage_currently: |
     
