--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -17,7 +17,7 @@ desc: Fırat Batuhan İçöz ve yaptıkları hakkında her şeyi bulabileceğini
 homepage_top_hello: > 
     Merhaba, ben Batuhan İçöz.
 homepage_tagline: >
-    17 yaşında Türk web geliştiricisi ve öğrenci. 
+    17 yaşında web geliştiricisi ve öğrenci. 
 homepage_twitter_follow: Takip et
 homepage_currently: |
     
