--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,7 +4,7 @@ lang_name: English
 route_about: about
 route_contact: contact
 route_pages: pages
-route_legal: legalinformation
+route_legal: legalinformations
 
 l_batuhans: Batuhan's
 l_homepage: Homepage
@@ -17,8 +17,7 @@ desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 homepage_top_hello: "Hello, I'm Batuhan İçöz."
 homepage_tagline: "I'm a 17-year-old Turkish web developer and a student."
 homepage_twitter_follow: Follow
-homepage_currently: |
-    
+homepage_currently: 'I work with amazing people at <a href="http://limk.com">Limk</a> to create some awesomeness.'
 about_title: Everything About 
 
 contact_title: Get in touch with
