--- a/locales/en.yml
+++ b/locales/en.yml
@@ -18,7 +18,7 @@ homepage_top_hello: "Hello, I'm Batuhan İçöz."
 homepage_tagline: "I'm a 17-year-old Turkish web developer and a student."
 homepage_twitter_follow: Follow
 homepage_currently: |
-    I work with amazing people at <a href="http://limk.com">Limk</a> to create some awesomeness.
+    I work with amazing people at Limk to create some awesomeness.
 about_title: Everything About 
 
 contact_title: Get in touch with
