--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -20,7 +20,7 @@ homepage_tagline: >
     17 yaşında web geliştiricisi ve öğrenci. 
 homepage_twitter_follow: Takip et
 homepage_currently:  |
-        <a href="http://limk.com">Limk</a>'te geliştirici olarak olarak çalışıyor.    
+        Limk'te geliştirici olarak olarak çalışıyor.    
 about_title: Hakkında her şey 
 
 contact_title: İletişime geç
