few improvements and upgrades

--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -11,6 +11,7 @@ l_homepage: Anasayfa
 l_about_me: Hakkımda
 l_my_projects: Projelerim
 l_contact_me: İletişim
+l_legal: Yasal bilgiler
 
 desc: Fırat Batuhan İçöz ve yaptıkları hakkında her şeyi bulabileceğiniz bir yer.
 
