--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,6 +11,7 @@ l_homepage: Homepage
 l_about_me: About me
 l_my_projects: My Projects
 l_contact_me: Contact me
+l_legal: Legal informations
 
 desc: A place you can find everthing about Fırat Batuhan İçöz and his work.
 
