--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -21,7 +21,7 @@ homepage_tagline: >
     17 yaşında web geliştiricisi ve öğrenci. 
 homepage_twitter_follow: Takip et
 homepage_currently:  |
-        Limk'te geliştirici olarak olarak çalışıyor.    
+        Limk'te süper havalı insanlarla fevkaladenin fevkinde işler yapıyorum.    
 about_title: Hakkında her şey 
 
 contact_title: İletişime geç
